--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Mini project</title>
   </head>
   <body>
-    <h1>hi</h1>
-    <h2>hello</h2>
+    <header></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
