--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="zcss/header.css" />
   </head>
   <body>
     <header>
@@ -22,6 +22,19 @@
           <li><button class="btn-primary" type="button">Hire me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3>Hi, I am</h3>
+          <h1>Mary Hardy</h1>
+          <p>
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btns-primary" type="button">Downlod CV</button>
+          <button class="btns-primary" type="button">Contact</button>
+          </div>
+          <div banner-img><img src="imgs/hardy.png" alt="">
+          </div>
     </header>
     <main></main>
     <footer></footer>
